--- a/src/views/mypage_info/mypage_info.css
+++ b/src/views/mypage_info/mypage_info.css
@@ -5,10 +5,6 @@
     height: 85vh;
 }
 
-.register-user-form-box {
-    width: 30rem;
-}
-
 .register-user-form-box .title {
     text-align: center;
 }
@@ -18,6 +14,7 @@
 }
 
 .register-user-form-box .input:focus {
+    
     border-color: #00d1b2;
     box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25);
 }
@@ -47,4 +44,26 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+/* 메인 */
+
+#mainContainer{
+    margin-top: 50px;
+    padding: 27px;
+}
+
+.btnContainer{
+display: flex;
+}
+
+.bbtnContainer{
+    margin-top: 50px;
+    margin-left: auto;
+}
+
+#searchAddress{
+    margin-top: 7px;
+    margin-left: 42px;
+    font-size: small;
 }
