--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -46,7 +46,7 @@
               </div>
               <div class="col-3 mt-5" id="summary">
                 <div id="cartDiv mt-2">
-                  <h3 id="cartForm" class="mt-4">주문 내역 확인</h3>
+                  <h3 id="cartForm" class="mt-4">< 주문 내역 확인 ></h3>
                   <div id="cartHeader"></div>
 
                   <div id="cartSummary">
@@ -60,7 +60,7 @@
                       <dt>총 결제금액</dt>
                       <dd id="totalPrice"></dd>
                     </dl>
-                    <button type="button" class="button" id="submitButton">
+                    <button type="button" class="button mb-3" id="submitButton">
                       결제하기
                     </button>
                   </div>
