--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -62,7 +62,7 @@
                 </a>
               </div>
               <div class="col-6 d-flex justify-content-center">
-                <a href="/admin/orders">
+                <a href="/order-lookup">
                   <div class="box btn btn-secondary" id="">
                     <i
                       class="fa-solid fa-circle-question"
