--- a/src/views/orderLookup/orderLookup.html
+++ b/src/views/orderLookup/orderLookup.html
@@ -38,7 +38,7 @@
           <div class="col-8 mt-4">
             <form class="mt-5" id="checkOrderForm">
               <label class="label" for="orderCode">주문 코드</label>
-              <div class="control">
+              <div class="control mb-4">
                 <input
                   class="input"
                   id="orderCode"
@@ -54,7 +54,7 @@
                   class="input"
                   id="phoneNumber"
                   type="phoneNumber"
-                  placeholder="전화번호를 입력하세요!"
+                  placeholder="전화번호를 입력해 주세요!"
                   autocomplete="on"
                 />
               </div>
