--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -20,142 +20,147 @@
     <link rel="stylesheet" href="/public/css/public.css" />
   </head>
   <body>
-    <nav
-      class="navbar navbar-expand-lg bg-light d-flex justify-content-evenly"
-      id="nav"
-    ></nav>
-    <div class="container">
-      <div class="container-fluid text-center">
-        <div class="row mt-4">
-          <div class="col-12"><h2>상품 상세 정보</h2></div>
-        </div>
-        <hr class="my-1" />
-        <div class="row mt-4">
-          <div class="col-1"></div>
-          <div class="col-10" id="imageContainer">
-            <div class="card mb-3 border shadow-lg">
-              <div class="row g-0 p-3">
-                <div class="col-md-6 p-2 d-flex align-items-center">
-                  <img
-                    src=""
-                    class="img-fluid rounded-start w-100 rounded shadow-lg"
-                    id="image"
-                  />
-                </div>
-                <div class="col-md-6">
-                  <div class="card-body m-0 p-2">
-                    <div class="card">
-                      <h5
-                        class="card-header text-start product-title p-2"
-                        id="main"
-                      >
-                        상품명
-                      </h5>
-                      <div class="card-body p-1">
-                        <p
-                          class="card-title text-start m-0 ms-3 sub"
-                          id="title"
-                        ></p>
+    <div class="pageWraper">
+      <nav
+        class="navbar navbar-expand-lg bg-light d-flex justify-content-evenly"
+        id="nav"
+      ></nav>
+      <div class="container">
+        <div class="container-fluid text-center">
+          <div class="row mt-4">
+            <div class="col-12"><h2>상품 상세 정보</h2></div>
+          </div>
+          <hr class="my-1" />
+          <div class="row mt-4">
+            <div class="col-1"></div>
+            <div class="col-10" id="imageContainer">
+              <div class="card mb-3 border shadow-lg">
+                <div class="row g-0 p-3">
+                  <div class="col-md-6 p-2 d-flex align-items-center">
+                    <img
+                      src=""
+                      class="img-fluid rounded-start w-100 rounded shadow-lg"
+                      id="image"
+                    />
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body m-0 p-2">
+                      <div class="card">
+                        <h5
+                          class="card-header text-start product-title p-2"
+                          id="main"
+                        >
+                          상품명
+                        </h5>
+                        <div class="card-body p-1">
+                          <p
+                            class="card-title text-start m-0 ms-3 sub"
+                            id="title"
+                          ></p>
+                        </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="card-body m-0 p-2">
-                    <div class="card">
-                      <h5
-                        class="card-header text-start product-title p-2"
-                        id="main"
-                      >
-                        가격
-                      </h5>
-                      <div class="card-body p-1">
-                        <p
-                          class="card-title text-start m-0 ms-3 sub"
-                          id="price"
-                        ></p>
+                    <div class="card-body m-0 p-2">
+                      <div class="card">
+                        <h5
+                          class="card-header text-start product-title p-2"
+                          id="main"
+                        >
+                          가격
+                        </h5>
+                        <div class="card-body p-1">
+                          <p
+                            class="card-title text-start m-0 ms-3 sub"
+                            id="price"
+                          ></p>
+                        </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="card-body m-0 p-2">
-                    <div class="card">
-                      <h5
-                        class="card-header text-start product-title p-2"
-                        id="main"
-                      >
-                        카테고리
-                      </h5>
-                      <div class="card-body p-1">
-                        <p
-                          class="card-title text-start m-0 ms-3 sub"
-                          id="category"
-                        ></p>
+                    <div class="card-body m-0 p-2">
+                      <div class="card">
+                        <h5
+                          class="card-header text-start product-title p-2"
+                          id="main"
+                        >
+                          카테고리
+                        </h5>
+                        <div class="card-body p-1">
+                          <p
+                            class="card-title text-start m-0 ms-3 sub"
+                            id="category"
+                          ></p>
+                        </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="card-body m-0 p-2">
-                    <div class="card">
-                      <h5
-                        class="card-header text-start product-title p-2"
-                        id="main"
-                      >
-                        제조사
-                      </h5>
-                      <div class="card-body p-1">
-                        <p
-                          class="card-title text-start m-0 ms-3 sub"
-                          id="manufacturer"
-                        ></p>
+                    <div class="card-body m-0 p-2">
+                      <div class="card">
+                        <h5
+                          class="card-header text-start product-title p-2"
+                          id="main"
+                        >
+                          제조사
+                        </h5>
+                        <div class="card-body p-1">
+                          <p
+                            class="card-title text-start m-0 ms-3 sub"
+                            id="manufacturer"
+                          ></p>
+                        </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="card-body m-0 p-2">
-                    <div class="card">
-                      <h5
-                        class="card-header text-start product-title p-2"
-                        id="main"
-                      >
-                        제품 소개
-                      </h5>
-                      <div class="card-body p-1">
-                        <p
-                          class="card-title text-start m-0 ms-3 sub"
-                          id="description"
-                        ></p>
+                    <div class="card-body m-0 p-2">
+                      <div class="card">
+                        <h5
+                          class="card-header text-start product-title p-2"
+                          id="main"
+                        >
+                          제품 소개
+                        </h5>
+                        <div class="card-body p-1">
+                          <p
+                            class="card-title text-start m-0 ms-3 sub"
+                            id="description"
+                          ></p>
+                        </div>
                       </div>
                     </div>
-                  </div>
-                  <div
-                    class="d-flex justify-content-between align-items-center mx-3"
-                  >
-                    <div class="d-flex h-100">
-                      <p class="btn btn-secondary" id="minus">-</p>
-                      <input
-                        type="text"
-                        value="1"
-                        class="m-0 text-center"
-                        id="count"
-                      />
-                      <p class="btn btn-secondary" id="plus">+</p>
-                    </div>
-                    <button class="btn btn-dark ms-1 me-3" id="addCart">
-                      장바구니 담기
-                    </button>
-                    <a
-                      class="btn btn-success ms-5"
-                      href="javascript:history.back()"
-                      >더 둘러보기</a
+                    <div
+                      class="d-flex justify-content-between align-items-center mx-3"
                     >
+                      <div class="d-flex h-100">
+                        <p class="btn btn-secondary" id="minus">-</p>
+                        <input
+                          type="text"
+                          value="1"
+                          class="m-0 text-center"
+                          id="count"
+                        />
+                        <p class="btn btn-secondary" id="plus">+</p>
+                      </div>
+                      <button class="btn btn-dark ms-1 me-3" id="addCart">
+                        장바구니 담기
+                      </button>
+                      <a
+                        class="btn btn-success ms-5"
+                        href="javascript:history.back()"
+                        >더 둘러보기</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
+            <div class="col-1"></div>
           </div>
-          <div class="col-1"></div>
         </div>
       </div>
+      <footer
+        class="container-fluid text-center mt-auto py-3"
+        id="footer"
+      ></footer>
     </div>
-    <footer class="mb-3 fixed-bottom" id="footer"></footer>
-    <script src="/public/js/template-renderer.js"></script>
-    <script src="product-detail.js"></script>
-    <script src="handle-cart.js"></script>
   </body>
+  <script src="/public/js/template-renderer.js"></script>
+  <script src="product-detail.js"></script>
+  <script src="handle-cart.js"></script>
 </html>
