--- a/src/views/mypage_info/mypage_info.html
+++ b/src/views/mypage_info/mypage_info.html
@@ -1,274 +1,228 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- bulma css 관련 -->
-
-    <title>Document</title>
-    <!-- 폰트 어썸: 아이콘 -->
-    <script defer src="https://kit.fontawesome.com/9daa42bcef.js" crossorigin="anonymous"></script>
-    <!-- 구글 OAuth -->
+    <title></title>
+    <script
+      defer
+      src="https://kit.fontawesome.com/9daa42bcef.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <!-- 카카오 OAuth -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-    <!-- 커스텀 css, js -->
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/public/css/public.css" />
     <link rel="stylesheet" href="mypage_info.css" />
     <script src="mypage_info.js" type="module" defer></script>
-</head>
+  </head>
 
-<body>
-    <!-- 헤더 -->
+  <body>
     <div class="pageWraper">
-        <!--마이페이지 회원정보 폼(Form) -->
-        <nav class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top" id="nav"></nav>
-
-
-        <!-- <div class="mypage-nav">
-            <button class="button is-primary" id="mypageNavInfoButton">내 정보 확인/수정</button>
-            <button class="button is-primary" id="mypageNavOrderButton" onclick="location.href='/mypage/order'">주문
-                정보</button>
-        </div> -->
-
-        <div class="container text-center">
-            <div class="row">
-                <div class="col-3">
-
-                </div>
-                <div class="col-6" id="mainContainer">
-
-                    <div class="container text-center">
-                        <form class="box register-user-form-box">
-                            <div class="row">
-                                <p>내 정보 확인</p>
-                                <div class="col">
-
-                                    <div class="mb-3">
-                                        <label for="exampleFormControlInput1" name="fullName"
-                                            class="form-label label">이름</label>
-                                        <input type="text" class="form-control able-when-edit" name="fullName"
-                                            id="fullNameInput" type="text" placeholder="톰 크루즈" autocomplete="on"
-                                            disabled>
-                                    </div>
-
-
-                                </div>
-                                <div class="col">
-
-                                    <div class="mb-3">
-                                        <label for="exampleFormControlInput1" class="form-label label"
-                                            name="email">이메일</label>
-                                        <input type="email" name="email" class="form-control able-when-edit"
-                                            id="emailInput" placeholder="abc@example.com" autocomplete="on" disabled>
-                                    </div>
-
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col">
-
-                                    <div class="mb-3">
-                                        <label for="exampleFormControlInput1" class="form-label label"
-                                            name="phoneNumber">전화번호</label>
-                                        <input type="tel" class="form-control able-when-edit" name="phoneNumber"
-                                            id="phoneNumberInput" type="tel" placeholder="010-0000-0000"
-                                            autocomplete="on" disabled>
-                                    </div>
-
-                                </div>
-                            </div>
-
-
-                            <div class="row">
-
-                                <div class="col">
-
-                                    <div class="col-sm">
-                                        <input type="tel" class="form-control able-when-edit" name="postalCode"
-                                            id="addressZipInput" type="tel" placeholder="우편 변호" autocomplete="on"
-                                            disabled>
-                                    </div>
-                                </div>
-
-                                <div class="col-6">
-
-                                    <div class="mb-2">
-                                        <input type="text" class="form-control able-when-edit" name="address1"
-                                            id="addressBasicInput" type="text" placeholder="기본 주소" autocomplete="on"
-                                            disabled>
-                                    </div>
-                                </div>
-
-                                <div class="col-3">
-
-                                    <div class="col">
-                                        <input type="text" class="form-control able-when-edit" name="address2"
-                                            id="addressOptionInput" type="text" placeholder="상세 주소" autocomplete="on"
-                                            disabled>
-                                    </div>
-                                    <label class="label btn btn-primary" for="adressInput" id="searchAddress">주소
-                                        찾기</label>
-                                </div>
-
-                            </div>
-
-                            <div class="row">
-                                <div class="col">
-
-                                    <div class="mb-3">
-                                        <label for="inputPassword4" class="form-label label"
-                                            name="password">비밀번호</label>
-                                        <input type="password" class="form-control input" name="password"
-                                            id="passwordInput" type="password" placeholder="********"
-                                            autocomplete="off">
-                                    </div>
-
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col">
-
-                                    <div class="mb-3">
-                                        <label for="inputPassword4" class="form-label label" name="passwordConfirm">비밀번호
-                                            확인</label>
-                                        <input type="password" class="form-control input" name="passwordConfirm"
-                                            id="passwordConfirmInput" type="password" placeholder="********"
-                                            autocomplete="off">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="btnContainer">
-                                <div class="bbtnContainer">
-                                    <button type="button" class="btn btn-info" id="editButton">내 정보 수정하기</button>
-                                    <button type="button" class="btn btn-info" id="submitButton">수정 완료</button>
-                                    <button type="button" class="btn btn-info" id="deleteButton">회원 탈퇴하기</button>
-                                </div>
-                            </div>
-
-
+      <nav
+        class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
+        id="nav"
+      ></nav>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-3"></div>
+          <div class="col-6" id="mainContainer">
+            <div class="container text-center">
+              <form class="box register-user-form-box">
+                <div class="row">
+                  <h1>내 정보 확인</h1>
+                  <div class="col">
+                    <div class="mb-3">
+                      <label
+                        for="exampleFormControlInput1"
+                        name="fullName"
+                        class="form-label label"
+                        >이름</label
+                      >
+                      <input
+                        type="text"
+                        class="form-control able-when-edit"
+                        name="fullName"
+                        id="fullNameInput"
+                        type="text"
+                        placeholder="톰 크루즈"
+                        autocomplete="on"
+                        disabled
+                      />
                     </div>
-
-                    </form>
-
+                  </div>
+                  <div class="col">
+                    <div class="mb-3">
+                      <label
+                        for="exampleFormControlInput1"
+                        class="form-label label"
+                        name="email"
+                        >이메일</label
+                      >
+                      <input
+                        type="email"
+                        name="email"
+                        class="form-control able-when-edit"
+                        id="emailInput"
+                        placeholder="abc@example.com"
+                        autocomplete="on"
+                        disabled
+                      />
+                    </div>
+                  </div>
                 </div>
-
-
-                <div class="col-3">
-
+                <div class="row">
+                  <div class="col">
+                    <div class="mb-3">
+                      <label
+                        for="exampleFormControlInput1"
+                        class="form-label label"
+                        name="phoneNumber"
+                        >전화번호</label
+                      >
+                      <input
+                        type="tel"
+                        class="form-control able-when-edit"
+                        name="phoneNumber"
+                        id="phoneNumberInput"
+                        type="tel"
+                        placeholder="010-0000-0000"
+                        autocomplete="on"
+                        disabled
+                      />
+                    </div>
+                  </div>
                 </div>
+                <div class="row">
+                  <div class="col">
+                    <div class="col-sm">
+                      <input
+                        type="tel"
+                        class="form-control able-when-edit"
+                        name="postalCode"
+                        id="addressZipInput"
+                        type="tel"
+                        placeholder="우편 번호"
+                        autocomplete="on"
+                        disabled
+                      />
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class="mb-2">
+                      <input
+                        type="text"
+                        class="form-control able-when-edit"
+                        name="address1"
+                        id="addressBasicInput"
+                        type="text"
+                        placeholder="기본 주소"
+                        autocomplete="on"
+                        disabled
+                      />
+                    </div>
+                  </div>
+                  <div class="col-3">
+                    <div class="col">
+                      <input
+                        type="text"
+                        class="form-control able-when-edit"
+                        name="address2"
+                        id="addressOptionInput"
+                        type="text"
+                        placeholder="상세 주소"
+                        autocomplete="on"
+                        disabled
+                      />
+                    </div>
+                    <label
+                      class="label btn btn-primary"
+                      for="adressInput"
+                      id="searchAddress"
+                      >주소 찾기</label
+                    >
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <div class="mb-3">
+                      <label
+                        for="inputPassword4"
+                        class="form-label label"
+                        name="password"
+                        >비밀번호</label
+                      >
+                      <input
+                        type="password"
+                        class="form-control input"
+                        name="password"
+                        id="passwordInput"
+                        type="password"
+                        placeholder="********"
+                        autocomplete="off"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <div class="mb-3">
+                      <label
+                        for="inputPassword4"
+                        class="form-label label"
+                        name="passwordConfirm"
+                        >비밀번호 확인</label
+                      >
+                      <input
+                        type="password"
+                        class="form-control input"
+                        name="passwordConfirm"
+                        id="passwordConfirmInput"
+                        type="password"
+                        placeholder="********"
+                        autocomplete="off"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="btnContainer">
+                  <div class="bbtnContainer">
+                    <button type="button" class="btn btn-info" id="editButton">
+                      내 정보 수정하기
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-info"
+                      id="submitButton"
+                    >
+                      수정 완료
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-info"
+                      id="deleteButton"
+                    >
+                      회원 탈퇴하기
+                    </button>
+                  </div>
+                </div>
+              </form>
             </div>
-
+          </div>
+          <div class="col-3"></div>
         </div>
-
-        <footer class="container-fluid text-center mt-auto py-3" id="footer"></footer>
-
+      </div>
+      <footer
+        class="container-fluid text-center mt-auto py-3"
+        id="footer"
+      ></footer>
     </div>
-
-    <!-- <div class="register-user-form-container">
-        <form class="box register-user-form-box" id="registerUserForm">
-            <p class="title is-5 has-text-primary">내 정보 확인</p>
-
-            <div class="field">
-                <label class="label" name="fullName">이름
-                    <input class="input able-when-edit" name="fullName" id="fullNameInput" type="text" placeholder="유재석"
-                        autocomplete="on" disabled />
-                </label>
-            </div>
-
-            <div class="field">
-                <label class="label" name="email">이메일
-                    <input class="input able-when-edit" name="email" id="emailInput" type="email"
-                        placeholder="abc@example.com" autocomplete="on" disabled />
-                </label>
-            </div>
-
-
-            <div class="field">
-                <label class="label" name="phoneNumber">전화번호
-                    <input class="input able-when-edit" name="phoneNumber" id="phoneNumberInput" type="tel"
-                        placeholder="010-0000-0000" autocomplete="on" disabled />
-                </label>
-            </div>
-
-            <div class="field">
-                <label class="label" name="address">주소
-                    <input class="input able-when-edit" name="postalCode" id="postalCodeInput" type="tel"
-                        placeholder="우편 변호" autocomplete="on" disabled />
-                    <input class="input able-when-edit" name="address1" id="address1Input" type="text"
-                        placeholder="기본 주소" autocomplete="on" disabled />
-                    <input class="input able-when-edit" name="address2" id="address2Input" type="text"
-                        placeholder="상세 주소" autocomplete="on" disabled />
-                </label>
-            </div>
-
-            <div class="field hidden-until-edit">
-                <label class="label" name="password">비밀번호
-                    <input class="input" name="password" id="passwordInput" type="password" placeholder="********"
-                        autocomplete="off" />
-                </label>
-            </div>
-
-            <div class="field hidden-until-edit mb-5">
-                <label class="label" name="passwordConfirm">비밀번호 확인
-                    <input class="input" name="passwordConfirm" id="passwordConfirmInput" type="password"
-                        placeholder="********" autocomplete="off" />
-                </label>
-            </div>
-
-            <button class="button hidden-when-edit is-primary" id="editButton"> 내 정보 수정하기 </button>
-            <button class="button hidden-until-edit is-primary" id="submitButton"> 수정 완료 </button>
-            <button class="button hidden-when-edit is-primary" id="deleteButton"> 회원 탈퇴하기 </button>
-
-
-        </form>
-    </div> </div>
- -->
-
-</body>
-<script src="/public/js/template-renderer.js"></script>
-
-<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-
+  </body>
+  <script src="/public/js/template-renderer.js"></script>
+  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </html>
-
-<!-- <div class="field">
-    <label
-      class="label btn btn-primary"
-      for="adressInput"
-      id="searchAddress"
-      >주소 찾기</label
-    >
-    <div class="control">
-      <input
-        class="input"
-        id="addressZipInput"
-        type="tel"
-        placeholder="우편 변호"
-        autocomplete="on"
-      />
-      <hr class="my-2" />
-      <input
-        class="input"
-        id="addressBasicInput"
-        type="tel"
-        placeholder="기본 주소"
-        autocomplete="on"
-      />
-      <hr class="my-2" />
-      <input
-        class="input"
-        id="addressOptionInput"
-        type="tel"
-        placeholder="상세 주소"
-        autocomplete="on"
-      />
-    </div>
-  </div> -->
