--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -8,15 +8,11 @@
     <link rel="stylesheet" href="order.css" />
     <script src="order.js" type="module" defer></script>
     <title>쇼핑-n팀/주문</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
     <script defer src="https://kit.fontawesome.com/9daa42bcef.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script src="register.js" type="module" defer></script>
-    <link rel="stylesheet" href="register.css" />
     <link rel="stylesheet" href="/public/css/public.css" />
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-    <script src="/public/js/template-renderer.js"></script>
+
 </head>
 
 <body>
@@ -24,7 +20,7 @@
         <nav class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top mb-3" id="nav"></nav>
     </header>
     <main>
-        <div id="orderInfoDiv">
+        <div class="jumbotron" id="orderInfoDiv">
             <h2>배송지정보</h2>
             <form id="orderInfoForm">
                 <!-- <label id="checkDefaultCheck">
@@ -44,7 +40,7 @@
                 <label class="label" name="request">
                     요청사항
                     <select id="requestSelectBox">
-                    <option value="0">
+                    <option value="0" >
                       배송시 요청사항을 선택해 주세요.
                     </option>
                     <option value="1" class="select-option">
@@ -84,6 +80,9 @@
         </div>
 
     </main>
+    <footer id="footer"></footer>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script src="/public/js/template-renderer.js"></script>
 </body>
 
 </html>
