--- a/src/views/order/order.css
+++ b/src/views/order/order.css
@@ -1,7 +1,9 @@
 .orderInfoForm {
     justify-content: space-between;
     align-items: center;
-    border: 1px solid black;
-    border-radius: 20px;
     padding: 15px 20px;
+}
+
+label {
+    display: block;
 }
