--- a/src/views/noticeDetail/noticeDetail.html
+++ b/src/views/noticeDetail/noticeDetail.html
@@ -34,8 +34,8 @@
       <section class="">
         <div id="content">
           <div id="notice_upper">
-            <div id="noticeTitle"></div>
-            <div id="noticeDate"></div>
+            <div id="noticeTitle" contenteditable="false"></div>
+            <div id="noticeDate" contenteditable="false"></div>
           </div>
           <div id="noticeContent"></div>
         </div>
