--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -45,10 +45,10 @@
     ></nav>
 
     <div class="container mb-4 mt-3" id="container">
-      <div class="container-fluid mt-3">
-        <div class="row mt-5">
-          <div class="col-3"></div>
-          <div class="col-6">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-4"></div>
+          <div class="col-4">
             <div class="register-user-form-containermt-5">
               <form class="mt-5" id="registerUserForm">
                 <p
@@ -90,10 +90,32 @@
                   로그인
                 </button>
               </form>
+              <div class="text-center mt-4">
+                <p id="forget-password">
+                  비밀번호를 잊어버리셨다면? ➡
+                  <span id="sendEmail">메일로 받기</span>
+                </p>
+              </div>
+              <div>
+                <form id="resetForm" class="d-none text-center">
+                  <input
+                    type="email"
+                    placeholder="초기화하려는 이메일을 입력하세요!"
+                    id="resetInput"
+                  />
+                  <button
+                    type="submit"
+                    class="mt-3 btn btn-warning"
+                    class="submit-btn"
+                  >
+                    비밀번호 초기화
+                  </button>
+                </form>
+              </div>
             </div>
           </div>
+          <div class="col-4"></div>
         </div>
-        <div class="col-3"></div>
       </div>
     </div>
     <footer
