--- a/src/views/mypage-info/mypage-info.html
+++ b/src/views/mypage-info/mypage-info.html
@@ -18,8 +18,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/public/css/public.css" />
-    <link rel="stylesheet" href="mypage_info.css" />
-    <script src="mypage_info.js" type="module" defer></script>
+    <link rel="stylesheet" href="mypage-info.css" />
+    <script src="mypage-info.js" type="module" defer></script>
   </head>
 
   <body>
