--- a/src/views/public/css/public.css
+++ b/src/views/public/css/public.css
@@ -11,9 +11,10 @@
   font-weight: 700;
 }
 
-/* html,body {
-  height: 100%;
-} */
+html,body {
+  margin: 0;
+  padding: 0;
+}
 
 #search {
   width: 250px;
@@ -59,11 +60,21 @@
   flex-direction: column;
 }
 
-footer {
+.footerItem{
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 100vh;
+  margin: 0;
+  padding: 0;
+  min-width: 100vw;
+}
+
+footer {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 100vw;
   height: 100px;
   background-color: #d1d4d7;
 }
