--- a/src/views/noticeDetail/noticeDetail.html
+++ b/src/views/noticeDetail/noticeDetail.html
@@ -32,13 +32,15 @@
       ></nav>
 
       <section class="">
-        <div id="content">
-          <div id="notice_upper">
-            <div id="noticeTitle" contenteditable="false"></div>
-            <div id="noticeDate" contenteditable="false"></div>
+        <form id="updateform">
+          <div id="content">
+            <div id="notice_upper">
+              <div id="noticeTitle" contenteditable="false"></div>
+              <div id="noticeDate"></div>
+            </div>
+            <div id="noticeContent" contenteditable="false"></div>
           </div>
-          <div id="noticeContent"></div>
-        </div>
+        </form>
       </section>
       <footer
         class="container-fluid text-center fixed-bottom mb-4"
