--- a/src/views/userOrder/userOrder.html
+++ b/src/views/userOrder/userOrder.html
@@ -17,7 +17,7 @@
     <div class="pageWraper">
         <nav class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top" id="nav"></nav>
         <div class="container text-center">
-            <span>주문 조회</span>
+            <h1>주문 조회</h1>
             <hr>
             <div class="row">
                 <div class="col-0.2"></div>
@@ -29,7 +29,8 @@
                         <thead>
                             <tr>
                                 <th scope="col" width="100rem">날짜</th>
-                                <th scope="col" width="250rem">주문정보</th>
+                                <th scope="col" width="300rem">주문정보</th>
+                                <th scope="col" width="120rem">가격</th>
                                 <th scope="col" width="120rem">상태</th>
                                 <th scope="col" width="120rem">신청</th>
                             </tr>
