feat(api): 오더 생성 API 테스트

--- a/src/views/login/login.css
+++ b/src/views/login/login.css
@@ -38,8 +38,10 @@ input[type='tel'] {
   text-decoration: underline;
 }
 
-#resetInput {
+.resetInput {
+  text-align: center;
   width: 100%;
+  margin-bottom: 12px;
 }
 
 #submit-btn {
