--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -102,19 +102,20 @@
                     type="email"
                     placeholder="초기화하려는 이메일을 입력하세요!"
                     id="resetInput"
+                    class="resetInput"
                   />
                   <input
                     type="text"
                     placeholder="핸드폰 번호를 입력해주세요!"
                     id="resetPhoneNuber"
+                    class="resetInput"
                   />
-                  <button
+                  <input
                     type="submit"
-                    class="mt-3 btn btn-warning"
+                    class="btn btn-warning"
                     class="submit-btn"
-                  >
-                    비밀번호 초기화
-                  </button>
+                    value="비밀번호 초기화"
+                  />
                 </form>
               </div>
             </div>
