feat(api): 비회원 주문 완료

--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="order.css" />
     <script src="order.js" type="module" defer></script>
-    <title>쇼핑-n팀/주문</title>
+    <title></title>
     <script
       defer
       src="https://kit.fontawesome.com/9daa42bcef.js"
@@ -28,12 +28,10 @@
 
   <body>
     <div class="pageWraper">
-      <header>
-        <nav
-          class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
-          id="nav"
-        ></nav>
-      </header>
+      <nav
+        class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
+        id="nav"
+      ></nav>
       <div class="container text-center" id="container"></div>
 
       <main>
