--- a/src/views/order_confirm/order_confirm.html
+++ b/src/views/order_confirm/order_confirm.html
@@ -1,30 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="order_confirm.css" />
     <script src="order_confirm.js" type="module" defer></script>
-    <title>쇼핑-n팀/주문완료</title>
-</head>
+    <title></title>
+    <script
+      defer
+      src="https://kit.fontawesome.com/9daa42bcef.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/public/css/public.css" />
+  </head>
 
-<body>
-    <header>
-        <div id="logoDiv">logo</div>
-        <div id="logoDiv">개발세발네발🐶</div>
-    </header>
-    <main>
-        <div id="orderCompleteContainer">
-            <p>주문이 완료되었습니다!</p>
+  <body>
+    <div class="pageWraper">
+      <nav
+        class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
+        id="nav"
+      ></nav>
+      <main class="mt-5">
+        <div id="orderInfoDiv" class="text-center">
+          <p id="header-message">주문이 완료되었습니다!</p>
+          <p id="number">
+            비회원 주문 조회를 위해 주문번호,<br />
+            핸드폰 번호를 꼭 저장해주세요!
+          </p>
+          <div class="important">
             <p>주문번호</p>
             <p id="orderIdOutput"></p>
-            <button type="button" id="orderCheckButton">주문 확인하기</button>
-            <button type="button" id="orderListButton" hidden>주문 목록보기</button>
-            <button type="button" id="continumShoppingButton">쇼핑 계속하기</button>
+            <p>핸드폰 번호</p>
+            <p id="orderNumberOutput"></p>
+          </div>
+          <button type="button" id="orderCheckButton">주문 확인하기</button>
+          <button type="button" id="orderListButton" hidden>
+            주문 목록보기
+          </button>
+          <button type="button" id="continumShoppingButton">
+            쇼핑 계속하기
+          </button>
         </div>
-    </main>
-</body>
-
+      </main>
+      <footer
+        class="container-fluid text-center mt-auto py-3"
+        id="footer"
+      ></footer>
+    </div>
+  </body>
+  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+  <script src="/public/js/template-renderer.js"></script>
 </html>
